2007-06-20  Marek Habersack  <mhabersack@novell.com>

	* AppResourcesCompiler.cs: use HttpRuntime.InternalCache to keep
	private entries.
	* CachingCompiler.cs: as above
	* AspGenerator.cs: as above

2007-06-13  Marek Habersack  <mhabersack@novell.com>

	* TemplateControlCompiler.cs: make sure control has a writable
	TemplateControl property prior to assigning values to it.

2007-06-09  Marek Habersack  <mhabersack@novell.com>

	* TemplateControlCompiler.cs: TemplateControl is assigned for
	controls that are placed within ContentPlaceHolder and not for the
	ContentPlaceHolder itself.
	No longer add the overriden version of TemplateSourceDirectory to
	the generated source, all the work is now done in
	Control.TemplateSourceDirectory.

	* BaseCompiler.cs: AppRelativeVirtualPath shouldn't end with a
	slash, for compatibility with MS.NET

2007-06-05  Marek Habersack  <mhabersack@novell.com>

	* TemplateControlCompiler.cs: TemplateSourceDirectory in the 2.0
	profile uses the TemplateControl property instead of Parent. This
	allows to return the correct path.

2007-06-01  Marek Habersack  <mhabersack@novell.com>

	* TemplateControlCompiler.cs: be case-insensitive when looking for
	Bind requests.

2007-05-29  Marek Habersack  <mhabersack@novell.com>

	* ThemeDirectoryCompiler.cs: pass the skin file's
	virtual path to the skin file parser as its first paramenter, and
	not a physical path.

2007-05-28  Marek Habersack  <mhabersack@novell.com>

	* ResourceExpressionBuilder.cs: properly cast
	GetGlobalResourceObject calls to the type of the property being
	assigned to.

2007-05-25  Marek Habersack  <mhabersack@novell.com>

	* TemplateControlCompiler.cs: Changed a few incorrect 
	ObjectCreationExpression to the correct DelegateCreationExpression.
	Fixes #81706.

2007-05-24  Marek Habersack  <mhabersack@novell.com>

	* PageCompiler.cs: added support for the PreviousPageType directive.

	* Directive.cs: as above.

2007-05-22  Marek Habersack  <mhabersack@novell.com>
